Enhance Caddy and Credential Server management with improved installation, error handling, and static site support