@@ -42,11 +42,11 @@ public final class SystemdManager {
         String content = """
                 #!/usr/bin/env bash
                 set -euo pipefail
-                exec /usr/bin/java -jar /opt/eduxel/eduxel.jar "$@"
+                exec /usr/bin/java --enable-native-access=ALL-UNNAMED -jar /opt/eduxel/eduxel.jar "$@"
                 """;
         try {
             Files.writeString(bin, content);
-            CommandRunner.must(List.of("sh","-lc","chmod +x /usr/local/bin/eduxel"));
+            CommandRunner.must(List.of("sh", "-lc", "chmod +x /usr/local/bin/eduxel"));
             ConsoleUI.ok("Wrapper installiert: /usr/local/bin/eduxel");
         } catch (Exception e) {
             throw new IllegalStateException("Wrapper schreiben fehlgeschlagen: " + e.getMessage(), e);
@@ -61,7 +61,7 @@ public final class SystemdManager {
                 After=network.target
 
                 [Service]
-                ExecStart=/usr/bin/java -jar /opt/eduxel/eduxel.jar serve
+                ExecStart=/usr/bin/java --enable-native-access=ALL-UNNAMED -jar /opt/eduxel/eduxel.jar serve
                 Restart=always
                 RestartSec=2
 
@@ -70,9 +70,9 @@ public final class SystemdManager {
                 """;
         try {
             Files.writeString(svc, unit);
-            CommandRunner.run(List.of("sh","-lc","systemctl daemon-reload >/dev/null 2>&1 || true"));
-            CommandRunner.run(List.of("sh","-lc","systemctl enable eduxel >/dev/null 2>&1 || true"));
-            CommandRunner.run(List.of("sh","-lc","systemctl restart eduxel >/dev/null 2>&1 || systemctl start eduxel >/dev/null 2>&1 || true"));
+            CommandRunner.run(List.of("sh", "-lc", "systemctl daemon-reload >/dev/null 2>&1 || true"));
+            CommandRunner.run(List.of("sh", "-lc", "systemctl enable eduxel >/dev/null 2>&1 || true"));
+            CommandRunner.run(List.of("sh", "-lc", "systemctl restart eduxel >/dev/null 2>&1 || systemctl start eduxel >/dev/null 2>&1 || true"));
             ConsoleUI.ok("Service aktiv: eduxel");
         } catch (Exception e) {
             throw new IllegalStateException("Service schreiben fehlgeschlagen: " + e.getMessage(), e);
@@ -80,10 +80,10 @@ public final class SystemdManager {
     }
 
     public void stopDisableRemoveService() {
-        CommandRunner.run(List.of("sh","-lc","systemctl stop eduxel >/dev/null 2>&1 || true"));
-        CommandRunner.run(List.of("sh","-lc","systemctl disable eduxel >/dev/null 2>&1 || true"));
-        CommandRunner.run(List.of("sh","-lc","rm -f /etc/systemd/system/eduxel.service || true"));
-        CommandRunner.run(List.of("sh","-lc","systemctl daemon-reload >/dev/null 2>&1 || true"));
+        CommandRunner.run(List.of("sh", "-lc", "systemctl stop eduxel >/dev/null 2>&1 || true"));
+        CommandRunner.run(List.of("sh", "-lc", "systemctl disable eduxel >/dev/null 2>&1 || true"));
+        CommandRunner.run(List.of("sh", "-lc", "rm -f /etc/systemd/system/eduxel.service || true"));
+        CommandRunner.run(List.of("sh", "-lc", "systemctl daemon-reload >/dev/null 2>&1 || true"));
         ConsoleUI.ok("Service entfernt.");
     }
 }
